syntax = "proto3";

import "Protos/google/api/annotations.proto";

option csharp_namespace = "DeltatreSearch";

package searchword;

// The SearchWord service definition.
service SearchWord {
  // Sends a greeting
  rpc SearchKeyWord (WordModel) returns (WordReply){
    option (google.api.http) = {
      get: "/v1/searchword/{name}"
    };
    
  }
  rpc UpdateKeyWord (WordModel) returns (WordReply){
    option (google.api.http) = {
      post: "/v1/searchword/updatekeyword"
      body: "*"
    };
    
  }
  rpc FindTopFiveKeyWord (ReturnTopFiveModel) returns (stream ReturnTopFiveReply){
    option (google.api.http) = {
      get: "/v1/searchword/topfive"
    };
  }
}

// The request message containing the user's name.
message WordModel {
  string word = 1;
}

// The response message containing the greetings.
message WordReply { 
  string result = 1;
}

message ReturnTopFiveModel {
}

message ReturnTopFiveReply {
	string word = 1;
	int32 countSearch = 2;
}
